--- a/WebContent/css/grayscale.css
+++ b/WebContent/css/grayscale.css
@@ -100,8 +100,8 @@ a:focus {
 
 .navbar-custom .nav li a:hover {
     outline: 0;
-    color: rgba(255,255,255,.8);
-    background-color: transparent;
+    color: rgba(0,0,0,.8);
+    background-color: #f3f3f3;
 }
 
 .navbar-custom .nav li a:focus,
