juomia lisätty tietokantaan, juomien kuvat päivitetty, ravintoarvot laitettu buttonin taakse, listan div boxit muutettu samankokoisiksi ettei taustakuva hyppisi

--- a/WebContent/css/teamblue_styles.css
+++ b/WebContent/css/teamblue_styles.css
@@ -49,7 +49,22 @@
 	color: black !important;
 }
 
-//* Tilaussivun taulukon tyyli *//
+.ravintoarvotDiv {
+  display: none;
+}
+
+.ravintoarvotBut {
+	background-color: transparent !important;
+	color: #333 !important;
+	font-size: small !important;
+	border: none; 
+}
+
+.thumbnail {
+	min-height: 630px;
+}
+
+/* Tilaussivun taulukon tyyli */
 .sisalto {
 	height:200px !important;
 	width:300px !important;
