--- a/WebContent/css/grayscale.css
+++ b/WebContent/css/grayscale.css
@@ -351,13 +351,13 @@ footer p {
 ::-moz-selection {
     text-shadow: none;
     background: #fcfcfc;
-    background: rgba(255,255,255,.2);
+    background: #42dca3;
 }
 
 ::selection {
     text-shadow: none;
     background: #fcfcfc;
-    background: rgba(255,255,255,.2);
+    background: #42dca3;
 }
 
 img::selection {
