etusivun kuvaan laitettu margin toppia että se ei olis kiinni yläreunassa, tilausvahvistus sivua tehty paremman näköiseksi

--- a/WebContent/css/teamblue_styles.css
+++ b/WebContent/css/teamblue_styles.css
@@ -17,6 +17,10 @@
    	margin:0 auto !important;
 }
 
+.etusivu-iso-logo {
+	margin-top: 80px;
+}
+
 /* Tähtiarvioinnin tekstin alas heitto */
 #ratingbox {
 	width: 200px;
