--- a/WebContent/css/bootstrap_navbar_cart.css
+++ b/WebContent/css/bootstrap_navbar_cart.css
@@ -1,39 +1,57 @@
-ul.dropdown-cart{
-    min-width:350px;
+ul.dropdown-cart {
+	min-width: 350px;
 }
-ul.dropdown-cart li .item{
-    display:block;
-    padding:3px 10px;
-    margin: 3px 0;
-    color: black;
+
+ul.dropdown-cart li .item {
+	display: block;
+	padding: 3px 10px;
+	margin: 3px 0;
+	color: white;
 }
-ul.dropdown-cart li .item:hover{
-    background-color:#f3f3f3;	
+
+ul.dropdown-cart li .item:hover {
+	background-color: #292929;
 }
-ul.dropdown-cart li .item:after{
-    visibility: hidden;
-    display: block;
-    font-size: 0;
-    content: " ";
-    clear: both;
-    height: 0;
+
+ul.dropdown-cart li .item:after {
+	visibility: hidden;
+	display: block;
+	font-size: 0;
+	content: " ";
+	clear: both;
+	height: 0;
 }
-ul.dropdown-cart li .item-left{
-    float:left;
+
+ul.dropdown-cart li .item-left {
+	float: left;
 }
-ul.dropdown-cart li .item-left img,
-ul.dropdown-cart li .item-left span.item-info{
-    float:left;
+
+ul.dropdown-cart li .item-left img, ul.dropdown-cart li .item-left span.item-info
+	{
+	float: left;
 }
-ul.dropdown-cart li .item-left span.item-info{
-    margin-left:10px;   
+
+ul.dropdown-cart li .item-left span.item-info {
+	margin-left: 10px;
 }
-ul.dropdown-cart li .item-left span.item-info span{
-    display:block;
+
+ul.dropdown-cart li .item-left span.item-info span {
+	display: block;
 }
-ul.dropdown-cart li .item-right{
-    float:right;
+
+ul.dropdown-cart li .item-right {
+	float: right;
 }
-ul.dropdown-cart li .item-right button{
-    margin-top:14px;
+
+ul.dropdown-cart li .item-right button {
+	margin-top: 14px;
+}
+
+@media(min-width: 768px) {
+	ul.dropdown-cart li .item {
+		color: black !important;
+	}
+	ul.dropdown-cart li .item:hover {
+	background-color: #f3f3f3;
+	}
 }
