--- a/WebContent/css/teamblue_styles.css
+++ b/WebContent/css/teamblue_styles.css
@@ -129,6 +129,6 @@ table .minikuvat {
 	color:black !important; 
 	text-align: center;
 	font-size:16px !important; 
-	font-family: 'Muli', sans-serif;
+	font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif !important; 
 
 }
