admin sivun tyylit korjattu

--- a/WebContent/css/teamblue_styles.css
+++ b/WebContent/css/teamblue_styles.css
@@ -89,7 +89,7 @@
 }
 
 .sisalto td, th {
-	magin: 0px;
+	margin: 0px;
 	padding: 15px !important;
 	text-align: center;
 	border-collapse: collapse !important;
