admin sivun linkit korjattu, tehty huono tilaustenseuranta sivu PITÄÄ JONKUN KORJATA SE ON HUONO EI TOIMI

--- a/WebContent/css/adminstyles.css
+++ b/WebContent/css/adminstyles.css
@@ -95,3 +95,20 @@ input {
 .tiedotteenPoisto {
 	color: pink;
 }
+
+.lisatiedot {
+  display: none;
+}
+
+.alastule {
+	display:none;
+}
+
+.ylinrivi {
+	float:left;
+	padding: 10px;
+}
+
+.tilaustable {
+	margin-left:auto !important;
+}
