--- a/WebContent/css/teamblue_styles.css
+++ b/WebContent/css/teamblue_styles.css
@@ -103,6 +103,7 @@
 }
 table .minikuvat {
 	padding: 15px 15px 15px 50px !important;
+	float:left !important;
 }
 
 /*joka toinen rivi taulukossa erivärinen */
