--- a/WebContent/css/adminstyles.css
+++ b/WebContent/css/adminstyles.css
@@ -76,10 +76,12 @@ label {
 	border-collapse: collapse !important;
 }
 
-.tuoterivi:nth-child(even) {background: #090909 !important;
+.tuoterivi:nth-child(even) {
+	background: #090909 !important;
 }
 
-.tuoterivi:nth-child(odd) {background: #0F0F0F !important;
+.tuoterivi:nth-child(odd) {
+	background: #0F0F0F !important;
 }
 
 #hallinta {
@@ -100,12 +102,7 @@ input {
   display: none;
 }
 
-.alastule {
-	display:none;
-}
-
 .ylinrivi {
-	float:left;
 	padding: 10px;
 }
 
