lisätty tilaustenseurantaan pizzojen ja juomien määrät tilauksella ja tilauksen tiloille värikoodit

--- a/WebContent/css/adminstyles.css
+++ b/WebContent/css/adminstyles.css
@@ -109,3 +109,12 @@ input {
 .tilaustable {
 	margin-left:auto !important;
 }
+.kasittelyssa {
+	background-color: red !important;
+}
+.valmis {
+	background-color: yellow !important;
+}
+.maksettu {
+	background-color: green !important;
+}
