--- a/WebContent/css/teamblue_styles.css
+++ b/WebContent/css/teamblue_styles.css
@@ -101,12 +101,16 @@
 	padding: 15px !important;
 	text-align: center;
 	border-collapse: collapse !important;
+	vertical-align: middle !important;
 }
 table .minikuvat {
 	padding: 15px 15px 15px 50px !important;
-	float:left !important;
+	text-align: left;
 }
 
+.pikkukuvat {
+	padding-right:5px !important;
+}
 /*joka toinen rivi taulukossa erivärinen */
 .tuoterivi:nth-child(even) {background: #090909 !important;
 }
@@ -155,3 +159,8 @@ table .minikuvat {
 	padding-top: 8px;
 }
 
+@media (max-width: 992px) {
+.pikkukuvat {display:none !important;}
+#minikuvat {padding: 15px !important;
+			text-align: center !important;}
+}
