--- a/WebContent/css/footable.bootstrap.css
+++ b/WebContent/css/footable.bootstrap.css
@@ -124,10 +124,10 @@ table.footable > tbody > tr.footable-detail-row > th {
 	content: "\e030";
 }
 .fooicon-plus:before {
-	content: "\2b";
+	content: "\e159";
 }
 .fooicon-minus:before {
-	content: "\2212";
+	content: "\e160";
 }
 .fooicon-search:before {
 	content: "\e003";
